syntax = "proto3";

message CommandToFcitx {
  oneof command {
    CommitText commit_text = 1;
    UpdatePreedit update_preedut = 2;
    UpdateLookuptable update_lt = 3;
  }
}

message CommitText { string text = 1; }

message UpdatePreedit { string text = 1; }

message UpdateLookuptable { LookupTable lt = 1; }

message LookupTable { repeated string candidates = 1; }